[package]
name = "rquest-middleware"
version = "0.4.2"
authors = ["Rodrigo Gryzinski <rodrigo.gryzinski@truelayer.com>"]
edition = "2018"
description = "Wrapper around reqwest to allow for client middleware chains."
repository = "https://github.com/TrueLayer/reqwest-middleware"
license = "MIT OR Apache-2.0"
keywords = ["reqwest", "http", "middleware"]
categories = ["web-programming::http-client"]
readme = "../README.md"

[features]
default = ['websocket']
multipart = ["rquest/multipart"]
json = ["rquest/json", "dep:serde_json"]
charset = ["rquest/charset"]
websocket = ["rquest/websocket"]
cookies = ["rquest/cookies"]
stream = ["rquest/stream"]


[dependencies]
anyhow = "1.0.0"
async-trait = "0.1.51"
bytes = ">=1.0.0"
http = "1.0.0"
rquest.workspace = true
serde = "1.0.106"
thiserror = "1.0.21"
tower-service = "0.3.0"
tracing = ">=0.1.0"
serde_json = {version = ">=1.0.0", optional = true}

[dev-dependencies]
rquest-retry = { path = "../rquest-retry" }
rquest-tracing = { path = "../rquest-tracing" }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
